tests/success/struct_inner_variable_reference.bz
struct S
{
	consteval arr: [??: auto] = [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ];
}

function main()
{
	let &_ = S.arr;
}
